--- a/Stock Control App/package.json
+++ b/Stock Control App/package.json
@@ -5,7 +5,17 @@
   "main": "server-simple.js",
   "scripts": {
     "start": "concurrently -n api,web -c green,blue \"node server-simple.js\" \"npm run dev --prefix frontend\"",
-    "server": "node server-simple.js"
+    "server": "node server-simple.js",
+    "test": "node scripts/run-all-tests.mjs",
+    "test:unit": "vitest run",
+    "test:unit:watch": "vitest",
+    "test:e2e": "playwright test",
+    "test:e2e:all": "playwright test --project=chromium --project=firefox --project=webkit",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:ui": "playwright test --ui",
+    "test:coverage": "vitest run --coverage",
+    "test:quick": "npm run test:unit",
+    "test:ci": "npm run test:unit && npm run test:e2e"
   },
   "dependencies": {
     "axios": "^1.13.1",
@@ -16,8 +26,15 @@
     "git": "^0.1.5"
   },
   "devDependencies": {
+    "@playwright/test": "^1.40.0",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@vitejs/plugin-react": "^5.0.4",
     "concurrently": "^9.2.1",
-    "nodemon": "^3.0.1"
+    "jsdom": "^23.0.1",
+    "nodemon": "^3.0.1",
+    "vite": "^7.1.7",
+    "vitest": "^1.0.4"
   },
   "keywords": [
     "stock",
